##########################
# Setup.py Configuration #
##########################
[metadata]
name = acsets
version = 0.0.1-dev
description = Access to ACSets through python.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/AlgebraicJulia/py-acsets
download_url = https://github.com/AlgebraicJulia/py-acsets/releases
project_urls =
    Bug Tracker = https://github.com/AlgebraicJulia/py-acsets/issues
    Source Code = https://github.com/AlgebraicJulia/py-acsets

# Author information
author = Owen Lynch
author_email = owen@topos.institute
maintainer = Owen Lynch
maintainer_email = owen@topos.institute

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    # TODO add your own free-text keywords

[options]
install_requires =
    pydantic

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
    jsonschema
docs =
    sphinx
    sphinx-rtd-theme
    
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext



######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = acsets
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/acsets
    .tox/*/lib/python*/site-packages/acsets

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    acsets
    tests
